--- a/_examples/websocket/basic/browserify/client.html
+++ b/_examples/websocket/basic/browserify/client.html
@@ -1,8 +1,12 @@
+<!-- 消息的输入 -->
+
 <!-- the message's input -->
 <input id="input" type="text" />
+<!-- 当单击时，一个websocket事件将被发送到服务器，在此示例中，我们注册了'chat'-->
 
 <!-- when clicked then a websocket event will be sent to the server, at this example we registered the 'chat' -->
 <button id="sendBtn" disabled>Send</button>
+<!-- 消息将显示在这里 -->
 
 <!-- the messages will be shown here -->
 <pre id="output"></pre>
