--- a/_examples/websocket/socketio/asset/index.html
+++ b/_examples/websocket/socketio/asset/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html>
-
 <head>
     <title>Socket.IO chat</title>
     <style>
@@ -57,7 +56,7 @@
     <form action="">
         <input id="m" autocomplete="off" /><button>Send</button>
     </form>
-    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
         var socket = io();
